@@ -29,24 +29,27 @@ public:
     void addProject(QListWidgetItem *item);
     void clearProjects();
 
-//TODO: Should probably have all project-management related
-//      code eg. import/export, import-all/export-all, delete
-//      here. Move export/import code over from Publisher?
+    static bool exportPackage(const KUrl &toExport, const KUrl &targetFile);
+    static bool importPackage(const KUrl &toImport, const KUrl &targetLocation);
+    static bool deleteProject(const KUrl &projectLocation);
 
 signals:
     void projectSelected(const QString &name, const QString &type);
+    void requestRefresh();
 
 private slots:
    void emitProjectSelected();
+   void confirmDeletion();
 
 private:
 //TODO: Implement:
 //      search/filterbar,
-//      project deletion,
 //      project multi-export,
 //      project multi-import.
     QListWidget *projectList;
     QPushButton *loadButton;
+    QPushButton *deleteButton;
+    static void removeDirectory(const QString&);
 };
 
 #endif // PROJECTMANAGER_H
